# SLEAPyFaces

./: .coverage  .gitignore  404.html  README.md  SLEAPyExample.ipynb  SLEAPyExample.py  environment.yml  example.py  hatch.toml  index.html  make_animations.py  make_video_graph_mp4.py  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.pyre/: pyre.stderr
api/: index.html
changelog/: index.html
docs/: api.md  changelog.md  gettingstarted.md  index.md  projectstructure.md
gettingstarted/: index.html
projectstructure/: index.html
search/: search_index.json
site/: 404.html  search.html
site/projectstructure/: index.html
site/search/: search_index.json
sleapyfaces/: __about__.py  __init__.py  __main__.py  clustering.py  config.py  docstring.py  experiment.py  io.py  normalize.py  project.py  structs.py  utils.py
sleapyfaces/base/: __init__.py  expr.py  proj.py  projs.py  type.py
sleapyfaces/clustering/: __init__.py  algorithms.py  features.py
sleapyfaces/files/: __init__.py  events.py  metadata.py  sleap.py
sleapyfaces/io/: __init__.py  events.py  metadata.py  sleap.py
sleapyfaces/types/: __init__.py  expr.py  proj.py  projs.py
sleapyfaces/utils/: __init__.py  graph.py  io.py  normalize.py  reform.py  structs.py
tests/: test_experiment.py  test_io.py  test_project.py  test_structs.py
