[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sleapyfaces"
description = 'A package for extracting facial expressions from SLEAP analyses'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = [
  "SLEAP",
  "facial expression",
  "facial data",
  "extraction",
  "analysis",
  "recognition",
  "classification",
  "tracking analyses",
]

authors = [
  { name = "Analetta (Annie) Ehler", email = "annie.ehler.4@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "click",
  "pandas",
  "numpy",
  "scipy",
  "scikit-learn",
  "ffmpeg-python",
  "h5py",
  "tables",
  "python-rapidjson",
  "matplotlib",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/annie444/sleapyfaces#readme"
Issues = "https://github.com/annie444/sleapyfaces/issues"
Source = "https://github.com/annie444/sleapyfaces"
Homepage = "https://github.com/annie444/sleapyfaces"
